--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dream akasa website",
+  "name": "dreamkasa-website",
   "description": "Dream Akasa Website",
   "version": "1.0.0",
   "author": "Setyo Nugroho <yo@setyongr.com>",
